--- a/portafolio_bootstrap_s3-main/proyectos.html
+++ b/portafolio_bootstrap_s3-main/proyectos.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body class="page-enter">
-  <!-- Navbar completo -->
+  <!-- Navbar .2 -->
   <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
     <div class="container">
       <a class="navbar-brand fw-bold" href="index.html">Portafolio Personal</a>
@@ -54,7 +54,7 @@
       <!-- Proyecto 2 bizzagi -->
       <div class="col-md-4">
         <div class="card shadow-sm h-100">
-          <img src="img/VideoJuego.jpg" class="card-img-top" alt="Bizaggi">
+          <img src="img/Bizagi.jpg" class="card-img-top" alt="Bizaggi">
           <div class="card-body">
             <h5 class="card-title text-primary">Bizzagi</h5>
             <p class="card-text text-secondary">Creación para gestionar procesos de negocio, mejorando su organización y eficiencia.</p>
