--- a/portafolio_bootstrap_s3-main/sobremi.html
+++ b/portafolio_bootstrap_s3-main/sobremi.html
@@ -6,88 +6,7 @@
   <title>Sobre mí - Portafolio</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="css/estilos.css">
-  <style>
-    /* General */
-    body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background-color: #f4f7f9;
-      color: #333;
-      padding-top: 70px; /* espacio navbar fijo */
-    }
-
-    /* Hero Sobre mí */
-    .sobre-mi-hero {
-      background-color: #2563eb; /* azul intenso */
-      padding: 80px 0;
-      border-radius: 12px;
-      margin-bottom: 50px;
-    }
-    .sobre-mi-hero h1 {
-      color: #000000; /* negro */
-      font-size: 2.8rem;
-    }
-    .sobre-mi-hero p {
-      color: #f0f9ff;
-      font-size: 1.2rem;
-    }
-    .sobre-mi-hero .btn-light {
-      background-color: #000000; /* negro */
-      color: white;
-      font-weight: bold;
-      transition: 0.3s;
-    }
-    .sobre-mi-hero .btn-light:hover {
-      background-color: #333333; /* gris oscuro al pasar el mouse */
-      color: white;
-    }
-
-    /* Tarjeta Datos Personales */
-    .card {
-      background-color: #ffffff;
-      border-radius: 12px;
-    }
-    .card h3 {
-      color: #2563eb;
-      margin-bottom: 20px;
-    }
-    .card p {
-      color: #374151;
-      margin-bottom: 10px;
-      font-size: 1.1rem;
-    }
-
-    /* Footer */
-    footer {
-      text-align: center;
-      padding: 20px 0;
-      margin-top: 60px;
-      background-color: #1f2937;
-      color: white; /* texto blanco */
-      border-radius: 8px 8px 0 0;
-    }
-
-    /* Imagen de perfil */
-    .perfil-foto {
-      border: 4px solid #ff7f50; /* borde coral */
-      width: 200px;
-      height: 200px;
-      object-fit: cover;
-    }
-
-    /* Ajuste responsive */
-    @media (max-width: 768px) {
-      .sobre-mi-hero h1 {
-        font-size: 2rem;
-      }
-      .sobre-mi-hero p {
-        font-size: 1rem;
-      }
-      .perfil-foto {
-        width: 150px;
-        height: 150px;
-      }
-    }
-  </style>
+ 
 </head>
 <body>
   <!-- Navbar -->
@@ -126,7 +45,8 @@
         <div class="col-md-8">
           <h1 class="fw-bold">Hola, soy <span>Luis Geraldo</span></h1>
           <p class="lead">
-            Estudiante de <strong>Ingeniería de Sistemas e Informática</strong> cursando actualmente el tercer ciclo de la universidad.
+            Estudiante de <strong>Ingeniería de Sistemas e Informática</strong> cursando actualmente el tercer ciclo de la universidad
+            tengo muchas ganas de aprender y aplicar mis conocimientos, me gusta el trabajo grupal, siempre y cuando los compañeros me apoyen y trabajemos de manera democratica y que exista el compañerismo.
           </p>
           <a href="proyectos.html" class="btn btn-light btn-lg mt-3">Ver mis proyectos realizados</a>
         </div>
@@ -145,7 +65,7 @@
         <div class="col-md-4 mb-3"><p><strong>📧 Email:</strong> luisgeral2006@gmail.com</p></div>
         <div class="col-md-4 mb-3"><p><strong>📱 Teléfono:</strong> +51 957 720 761</p></div>
         
-        <div class="col-md-4 mb-3"><p><strong>🎂 Edad:</strong> 17 años</p></div>
+        <div class="col-md-4 mb-3"><p><strong>🎂 Edad:</strong> 19 años</p></div>
         <div class="col-md-4 mb-3"><p><strong>🎓 Carrera:</strong> Ingeniería de Sistemas e Informática</p></div>
         <div class="col-md-4 mb-3"><p><strong>🏙 Ciudad:</strong> Perú, Jauja</p></div>
         
